fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ body {
   line-height: 1;
   color: var(--text-clr);
   background-color: var(--primary-clr);
+  overflow-x: hidden;
 }
 
 /***********************/
